@@ -1,5 +1,5 @@
-.\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.47.8.
-.TH XJADEO "1" "January 2021" "xjadeo version 0.8.10" "User Commands"
+.\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.48.1.
+.TH XJADEO "1" "April 2022" "xjadeo version 0.8.11" "User Commands"
 .SH NAME
 xjadeo \- X Jack Video Monitor
 .SH SYNOPSIS
@@ -362,9 +362,9 @@ Report bugs at <https://github.com/x42/xjadeo/issues>
 Website: <http://xjadeo.sf.net/>
 .TP
 built from:
-scm\-v0.8.10
+scm\-v0.8.11
 .IP
-compiled with: AVFORMAT=0x3a1464 AVCODEC=0x3a2364 AVUTIL:0x381664
+compiled with: AVFORMAT=0x3a2d64 AVCODEC=0x3a5b64 AVUTIL:0x383364
 configuration: [ LTC JACK\-SESSION POSIX\-MQueue OSC ]
 .br
 MTC/MIDI:      [ jack\-midi alsa\-sequencer portmidi alsa\-raw ]
