@@ -1,3 +1,9 @@
+2022-04-01 (0.8.11)  Robin Gareus <robin@gareus.org>
+* add compatibility for ffmpeg-5.0
+* update static-builder to use ffmpeg-5.0
+* add support for modern mingw (pthread)
+* update git clone URIs - avoid git://
+
 2021-01-06 (0.8.10)  Robin Gareus <robin@gareus.org>
 * add keyboard shortcuts for +/- 1 second offsets
 * tweak Windows installer 32/64bit reg-keys
